--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
     "next": "14.2.35",
     "react": "^18",
